[package]
name = "bioserde"
version = "0.1.0"
edition = "2021"

[dependencies]
noodles = { version = "0.24", features = ["core", "bed"], path = "../noodles/noodles" }
noodles-bed = { version = "0.3", path = "../noodles/noodles-bed" }

async-trait = { version = "0.1" }
arrow = { version = "17" }
serde = { version = "1" }
thiserror = { version = "1" }